@@ -1,6 +1,6 @@
 // ****************************************************************************
 // 
-// Copyright (C) 2005-2013 Doom9 & al
+// Copyright (C) 2005-2014 Doom9 & al
 // 
 // This program is free software; you can redistribute it and/or modify
 // it under the terms of the GNU General Public License as published by
@@ -69,13 +69,6 @@ namespace MeGUI.core.details
 
         public void StartAll(bool restartStopping)
         {
-            // check for missing components
-            if (UpdateWindow.isComponentMissing())
-            {
-                mainForm.startUpdateCheck();
-                return;
-            }
-
             if (workers.Values.Count == 0)
                 NewWorker(freeWorkerName(), false);
 
